bk_ida/gobmkida/c3/do_play_move
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_play_move/src/engine/board.c:4601:6: error: use of undeclared identifier 'dword_A9019C'
if ( dword_A9019C[( _QWORD)v188] != liberty_mark ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_play_move/src/engine/board.c:4611:1: error: use of undeclared identifier 'dword_A9019C'
dword_A9019C[( _QWORD)v188] = v124; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_play_move/src/engine/board.c:4893:6: error: use of undeclared identifier 'byte_9C689E'
&& ( byte_9C689E[( _QWORD)v188] != ( _BYTE)v91 || string[239].neighborlist[( _QWORD)v188 + 159] != v20) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_play_move/src/engine/board.c:4942:6: error: use of undeclared identifier 'byte_9C688D'
&& ( byte_9C688D[( _QWORD)v188] != ( _BYTE)v91 || string[239].neighborlist[( _QWORD)v188 + 142] != v20) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_play_move/src/engine/board.c:4960:6: error: use of undeclared identifier 'byte_9C688D'
&& ( byte_9C688D[( _QWORD)v188] != ( _BYTE)v91 || string[239].neighborlist[( _QWORD)v188 + 142] != v20) ) 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/do_play_move/src/obj/1/board.o] Error 1
